change register body param for swagger
